@@ -3,6 +3,9 @@
 
 dialogfe (05 Jan 2005):
 
+  4 Apr 2005; Andrew Gaffney <agaffney@gentoo.org>
+  New timezone function
+
   1 Apr 2005; Preston Cody <codeman@gentoo.org>
   Added format and type options to existing partitions.
   
